--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -22,12 +22,12 @@
     <div class="card shadow bg-white rounded d-md-none">
       <div class="card-body">
         <div class="row">
-          <div class="col-6">
-            For Work
-          </div>
-          <div class="col-6 signinAlign">
-            Sign in
-          </div>
+            <div class="col-6">
+              For Work
+            </div>
+            <div class="col-6 signinAlign">
+              Sign in
+            </div>
         </div>
       </div>
     </div>
@@ -40,90 +40,101 @@
             <img src="assets/logo-gmail.png" alt="gmail" class="gmailImg"> <span class="gmailText">Gmail</span>
           </div>
           <div class="col-8 signinAlign">
-            <li>For Work</li>
-            <li>Sign in</li>
+            <nav>
+              <li>For Work</li>
+              <li>Sign in</li>
             <button class="btn-sm btn-primary float-right">Create an account</button>
+            </nav>
           </div>
         </div>
       </div>
     </div>
   </header>
-  <div class="container-fluid LandingPageSection d-md-none">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h1 class="LandingPageSectionContentMobile">Get more done with Gmail</h1>
-        <p class="LandingPageSectionContentMobile">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
-        <img src="assets/landing-page-image-mobile.png" alt="gmailInboxPage" class="LandingImgMobile">
-      </div>
-      <div class="col-12 text-center LandingPageSectionContentMobile">
-        <button class="btn btn-primary">Get Gmail</button>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid LandingPageSection d-none d-md-flex">
-    <div class="row">
-      <div class="col-md-6">
-        <h1 class="LandingPageSectionHeadDesktop">Get more done with Gmail</h1>
-        <p class="LandingPageSectionContentDesktop">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
-        <button class="btn btn-primary">Create an account</button>
-      </div>
-      <div class="col-md-6">
-        <img src="assets/landing-page-image-desktop.png" alt="gmailInboxPage" class="LandingImgDesktop">
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h1 class="LandingPageSectionContentMobile">Experience Gmail on any device</h1>
-        <p class="LandingPageSectionContentMobile">The ease & simplicity of Gmail,wherever you are.</p>
-        <img src="assets/google-playstore.png" alt="playstore" class="playstoreImg">
-        <img src="assets/app-store.png" alt="app-store" class="playstoreImg">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <img src="assets/experience-image-mobile-desktop.png" alt="experienceImg" class="experienceImg">
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid d-md-none">
-    <div class="row">
-      <div class="col-12 mb-4 text-center">
-        <div class="card LandingPageSection text-center">
-          <div class="card-body">
-            <h2 class="CardsSpacingMobile">Stay Organised instantly</h2>
-            <p>See what's new at a glance and decide what you want to read and respond to</p>
-            <img src="assets/stay-organised-instantly-mobile.png" alt="gmail" class="imagesWidth">
-          </div>
+  <section>
+    <div class="container-fluid LandingPageSection d-md-none">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="LandingPageSectionContentMobile">Get more done with Gmail</h1>
+          <p class="LandingPageSectionContentMobile">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
+          <img src="assets/landing-page-image-mobile.png" alt="gmailInboxPage" class="LandingImgMobile">
+        </div>
+        <div class="col-12 text-center LandingPageSectionContentMobile">
+          <button class="btn btn-primary">Get Gmail</button>
         </div>
       </div>
-      <div class="col-12 mb-4">
-        <div class="card LandingPageSection text-center">
-          <div class="card-body">
-            <h2 class="CardsSpacingMobile">Never drop the ball</h2>
-            <p>Get nudges that remind you to follow up, and respond to images so that nothing slips through the cracks.</p>
-            <img src="assets/never-drop-the-ball-mobile.png" alt="gmail" class="imagesWidth">
-          </div>
+    </div>
+  </section>
+  <section>
+    <div class="container-fluid LandingPageSection d-none d-md-flex">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="LandingPageSectionHeadDesktop">Get more done with Gmail</h1>
+          <p class="LandingPageSectionContentDesktop">Now more secure, smarter and easier to use-helping you save time and do more with your inbox</p>
+          <button class="btn btn-primary">Create an account</button>
+        </div>
+        <div class="col-md-6">
+          <img src="assets/landing-page-image-desktop.png" alt="gmailInboxPage" class="LandingImgDesktop">
         </div>
       </div>
-      <div class="col-12 mb-4 text-center">
-        <h2 class="CardsSpacingMobile">Take action right from the inbox</h2>
-        <p>View attachments,RSVP to events,snooze messages and more without opening any emails.</p>
-        <img src="assets/take-action-mobile.png" alt="gmail" class="imagesWidth">
+    </div>
+  </section>
+  <section>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="LandingPageSectionContentMobile">Experience Gmail on any device</h1>
+          <p class="LandingPageSectionContentMobile">The ease & simplicity of Gmail,wherever you are.</p>
+          <img src="assets/google-playstore.png" alt="playstore" class="playstoreImg">
+          <img src="assets/app-store.png" alt="app-store" class="playstoreImg">
+        </div>
       </div>
-      <div class="col-12 mb-4 LandingPageSection text-center">
-        <h2 class="CardsSpacingMobile">Avoid Suspicious emails</h2>
-        <p>Gmail blocks 99.9% of dangerous emails they reach you.If we think something happens is pish-y,you'll get a warning.</p>
-        <img src="assets/avoid-suspicious-emails-mobile.png" alt="suspicious gmail" class="imagesWidth">
-      </div>
-      <div class="col-12 mb-4 text-center">
-        <img src="assets/logo-gmail.png" alt="gmail" class="GmailLogo CardsSpacingMobile">
-        <h2>Get Started with Gmail</h2>
-        <button class="btn-lg btn-primary">Get Gmail</button>
+      <div class="row">
+        <div class="col-12">
+          <img src="assets/experience-image-mobile-desktop.png" alt="experienceImg" class="experienceImg">
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <section>
+    <div class="container-fluid d-md-none">
+      <div class="row">
+        <div class="col-12 mb-4 text-center">
+          <div class="card LandingPageSection text-center">
+            <div class="card-body">
+              <h2 class="CardsSpacingMobile">Stay Organised instantly</h2>
+              <p>See what's new at a glance and decide what you want to read and respond to</p>
+              <img src="assets/stay-organised-instantly-mobile.png" alt="gmail" class="imagesWidth">
+            </div>
+          </div>
+        </div>
+        <div class="col-12 mb-4">
+          <div class="card LandingPageSection text-center">
+            <div class="card-body">
+              <h2 class="CardsSpacingMobile">Never drop the ball</h2>
+              <p>Get nudges that remind you to follow up, and respond to images so that nothing slips through the cracks.</p>
+              <img src="assets/never-drop-the-ball-mobile.png" alt="gmail" class="imagesWidth">
+            </div>
+          </div>
+        </div>
+        <div class="col-12 mb-4 text-center">
+          <h2 class="CardsSpacingMobile">Take action right from the inbox</h2>
+          <p>View attachments,RSVP to events,snooze messages and more without opening any emails.</p>
+          <img src="assets/take-action-mobile.png" alt="gmail" class="imagesWidth">
+        </div>
+        <div class="col-12 mb-4 LandingPageSection text-center">
+          <h2 class="CardsSpacingMobile">Avoid Suspicious emails</h2>
+          <p>Gmail blocks 99.9% of dangerous emails they reach you.If we think something happens is pish-y,you'll get a warning.</p>
+          <img src="assets/avoid-suspicious-emails-mobile.png" alt="suspicious gmail" class="imagesWidth">
+        </div>
+        <div class="col-12 mb-4 text-center">
+          <img src="assets/logo-gmail.png" alt="gmail" class="GmailLogo CardsSpacingMobile">
+          <h2>Get Started with Gmail</h2>
+          <button class="btn-lg btn-primary">Get Gmail</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
   <div class="container-fluid d-md-flex d-none">
     <div class="row">
       <div class="col-md-6">
@@ -165,16 +176,19 @@
       </div>
     </div>
   </div>
+  </section>
   <footer>
     <div class="container-fluid LandingPageSection d-md-none">
       <div class="row">
         <div class="col-12">
           <p class="footerGoogle">Google</p>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>About Google</li>
-          <li>Google Products</li>
-          <li>Our policy</li>
+          <nav>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>About Google</li>
+            <li>Google Products</li>
+            <li>Our policy</li>
+          </nav>
         </div>
         <div class="col-4">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
@@ -192,14 +206,15 @@
       <div class="row">
         <div class="col-10">
           <p class="footerGoogle">Google</p>
-          <li>Privacy</li>
-          <li>Terms</li>
-          <li>About Google</li>
-          <li>Google Products</li>
-          <li>Our policy</li>
-          <li>
-            <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
-          </li>
+          <nav>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>About Google</li>
+            <li>Google Products</li>
+            <li>Our policy</li>
+            <li <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
+            </li>
+          </nav>
         </div>
         <div class="col-2 dropdownStyle">
           <div class="dropdown float-right">
@@ -212,18 +227,20 @@
     </div>
     <div class="container-fluid LandingPageSection d-none d-xl-flex">
       <div class="row">
-        <div class="col-8 float-right">
-          <li class="footerGoogle">Google</li>
-          <li class="footerDesktop">Privacy</li>
-          <li class="footerDesktop">Terms</li>
-          <li class="footerDesktop">About Google</li>
-          <li class="footerDesktop">Google Products</li>
-          <li class="footerDesktop">Our policy</li>
-        </div>
+        <nav>
+          <div class="col-8 float-right">
+            <li class="footerGoogle">Google</li>
+            <li class="footerDesktop">Privacy</li>
+            <li class="footerDesktop">Terms</li>
+            <li class="footerDesktop">About Google</li>
+            <li class="footerDesktop">Google Products</li>
+            <li class="footerDesktop">Our policy</li>
+          </div>
+        </nav>
         <div class="col-2 footerDesktopImg">
           <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
         </div>
-        <div class="col-2 footerDesktop">
+        <div class="col-2 footerDesktopImg">
           <div class="dropdown">
             <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
