--- a/assignments/assignment-23/index.html
+++ b/assignments/assignment-23/index.html
@@ -202,7 +202,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid LandingPageSection d-md-flex d-none d-xl-none">
+    <div class="container-fluid LandingPageSection d-md-flex d-none">
       <div class="row">
         <div class="col-10">
           <p class="footerGoogle">Google</p>
@@ -218,30 +218,6 @@
         </div>
         <div class="col-2 dropdownStyle">
           <div class="dropdown float-right">
-            <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid LandingPageSection d-none d-xl-flex">
-      <div class="row">
-        <nav>
-          <div class="col-8 float-right">
-            <li class="footerGoogle">Google</li>
-            <li class="footerDesktop">Privacy</li>
-            <li class="footerDesktop">Terms</li>
-            <li class="footerDesktop">About Google</li>
-            <li class="footerDesktop">Google Products</li>
-            <li class="footerDesktop">Our policy</li>
-          </div>
-        </nav>
-        <div class="col-2 footerDesktopImg">
-          <p><img src="assets/question-mark.png" alt="question mark"> <span class="footerContentOpacity">Help</span></p>
-        </div>
-        <div class="col-2 footerDesktopImg">
-          <div class="dropdown">
             <button class="btn dropdown-toggle footerContentOpacity" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English (India)</button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             </div>
