--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
-    <script src="../../bootstrap/jquery.min.js"></script>
-    <script src="../../bootstrap/popper.min.js"></script>
-    <script src="../../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
 
-  <body></body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
+  <script src="../../bootstrap/jquery.min.js"></script>
+  <script src="../../bootstrap/popper.min.js"></script>
+  <script src="../../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+  <header>
+
+  </header>
+  <section>
+    <nav>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 text-center">
+              <ul class="mb-0">
+                <li class="navOpacity d-md-none ">
+                  <h5>Explore</h5>
+                </li>
+                <li class="d-none d-md-inline-block navDisplay navListItemsSpacing navOpacity">Explore</li>
+                <li class="navDisplay navTopicsSection navListItemsSpacing pb-3">Topics</li>
+                <li class="navOpacity navDisplay navListItemsSpacing">Trending </li>
+                <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
+                <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 d-none d-xl-flex">
+              <ul class="mb-0">
+                <li class="navOpacity d-md-none ">
+                  <h5>Explore</h5>
+                </li>
+                <li class="d-none d-md-inline-block navDisplay navListItemsSpacing navOpacity">Explore</li>
+                <li class="navDisplay navTopicsSection navListItemsSpacing pb-3">Topics</li>
+                <li class="navOpacity navDisplay navListItemsSpacing">Trending </li>
+                <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
+                <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 topicsSec text-center">
+          <h2>Topics</h2>
+          <h5 class="navOpacity">Browse popular topics on GitHub</h5>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
