--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -103,7 +103,7 @@
         <div class="col-12 col-xl-8">
           <div class="row">
             <div class="col-2">
-              <div class="hashBox text-center pt-2 m-auto">#</div>
+              <div class="hashBox text-center pt-2">#</div>
             </div>
             <div class="col-10 col-md-8">
               <h5>3D</h5>
@@ -114,6 +114,203 @@
               <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
             </div>
           </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div class="hashBox text-center pt-2">#</div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Ajax</h5>
+              <p class="featuredTopicsContent mb-0">Ajax is a technique for creating interactive web applications.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div class="hashBox text-center pt-2">#</div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Algorithm</h5>
+              <p class="featuredTopicsContent mb-0">Algorithms are self contained sequences that carry out a variety of tasks.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/amphp.png" alt="amp" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Amp</h5>
+              <p class="featuredTopicsContent mb-0">Amp is a non-blocking currency framework for php.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/android.png" alt="android" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Android</h5>
+              <p class="featuredTopicsContent mb-0">Android is an operating system built by google designed for mobile devices.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/angular.png" alt="angular" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Angular</h5>
+              <p class="featuredTopicsContent mb-0">Angular is an open source web application platform</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/ansible.png" alt="ansible" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Ansible</h5>
+              <p class="featuredTopicsContent mb-0">Ansible is a simple and powerful automation engine.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div class="hashBox text-center pt-2">#</div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Api</h5>
+              <p class="featuredTopicsContent mb-0">An Api(Application Program Interface) is a collection of protocols and subroutines for building software</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/arduino.png" alt="arduino" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Arduino</h5>
+              <p class="featuredTopicsContent mb-0">Arduino is an open source hardware and software company and maker community.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/aspnet.png" alt="aspnet" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>ASP.NET</h5>
+              <p class="featuredTopicsContent mb-0">ASP.NET is a web framework for building modern web apps and services.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/atom.png" alt="atom" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Atom</h5>
+              <p class="featuredTopicsContent mb-0">Atom is a open source text editor built with web technologies</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/awesome.png" alt="awesome" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Awesome Lists</h5>
+              <p class="featuredTopicsContent mb-0">An awesome list is a list of awesome things curated by the community.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/aws.png" alt="aws" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Amazon Web Services</h5>
+              <p class="featuredTopicsContent mb-0">Amazon Web Services provided on-demand cloud computing platform on a subscription basis.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div><img src="assets/azure.png" alt="azure" class="featuredTopicsImg"></div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Azure</h5>
+              <p class="featuredTopicsContent mb-0">Azure is a cloud computing service provided by Microsoft.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-2">
+              <div class="hashBox text-center pt-2">#</div>
+            </div>
+            <div class="col-10 col-md-8">
+              <h5>Mobile</h5>
+              <p class="featuredTopicsContent mb-0">Mobile apps,mobile OS,mobile databases, & mobile testing frameworks.</p>
+              <button class="btn-sm btn-light star d-md-none"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+            <div class="col-md-2 d-none d-md-block">
+              <button class="btn btn-light star"><img src="assets/star.svg" alt="star">Star</button>
+            </div>
+          </div>
+          <hr>
         </div>
       </div>
     </div>
