--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -311,6 +311,35 @@
             </div>
           </div>
           <hr>
+          <div class="col-12 mt-4 mb-4">
+            <button type="button" class="btn btn-outline-primary btn btn-block pl-0 ml-0">Load more..</button>
+          </div>
+          <div class="col-12 col-md-4 d-xl-none mt-2">
+            <h5>Popular topics</h5>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">react</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">javascript</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">css</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">python</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">html</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">ecommerce</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">python-3</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">ecommerce-platform</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">nci-itcr</li>
+            <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">solidus-extensions</li>
+          </div>
+        </div>
+        <div class="d-none d-xl-4">
+          <h5>Popular topics</h5>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">react</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">javascript</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">css</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">python</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">html</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">ecommerce</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">python-3</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">ecommerce-platform</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">nci-itcr</li>
+          <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">solidus-extensions</li>
         </div>
       </div>
     </div>
