--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -97,8 +97,8 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-12 mt-3">
-          <h3>All featured topics</h3>
+        <div class="col-12 mt-4">
+          <h3 class="mt-4 mb-4">All featured topics</h3>
         </div>
         <div class="col-12 col-xl-8">
           <div class="row">
