--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -328,7 +328,7 @@
             <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">solidus-extensions</li>
           </div>
         </div>
-        <div class="d-none col-xl-4 d-xl-block">
+        <div class="d-none col-xl-4 d-xl-block mt-0">
           <h5 class="mt-0">Popular topics</h5>
           <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">react</li>
           <li class="popularTopics pr-1 pb-1 pl-2 pr-2 mr-2 mb-2">javascript</li>
