--- a/assignments/assignment-20/index.html
+++ b/assignments/assignment-20/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-9 black1">
+      <div class="col-12 col-md-9 blackbackground">
         <div class="row">
           <div class="col-12">
             <div class="row">
@@ -30,7 +30,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6 black">
+              <div class="col-6">
                 <div class="row">
                   <div class="col-7">
                     <h6 class="font_color head">PRECIPITATION</h6>
@@ -43,23 +43,23 @@
                     <p class="font_color weatherValues">0 km/h</p>
                   </div>
                 </div>
-                <div class="row weatherspace">
-                  <div class="col-2 sat">
+                <div class="row weatherspace p-2">
+                  <div class="col-2 weatherforecastvalue">
                     <img src="assets/sun-black.svg" alt="black-sun" class="days">
                     <p class="days">Sat</p>
                     <p class="temp">29<sup>o</sup>C</p>
                   </div>
-                  <div class="col-3 sun">
+                  <div class="col-3 weatherforecastvaluestyle">
                     <img src="assets/cloud.svg" alt="cloud" class="days">
                     <p class="days">Sun</p>
                     <p class="temp">21<sup>o</sup>C</p>
                   </div>
-                  <div class="col-3 sun">
+                  <div class="col-3 weatherforecastvaluestyle">
                     <img src="assets/cloud-snow.svg" alt="cloud" class="days">
                     <p class="days">Mon</p>
                     <p class="temp">08<sup>o</sup>C</p>
                   </div>
-                  <div class="col-3 sun">
+                  <div class="col-3 weatherforecastvaluestyle">
                     <img src="assets/cloud-rain.svg" alt="cloud" class="days">
                     <p class="days">Tue</p>
                     <p class="temp">19<sup>o</sup>C</p>
