--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -80,7 +80,14 @@
           <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
         </div>
-        <div class="col-12 d-none d-md-flex">
+        <div class="col-12 d-none d-md-flex d-xl-none">
+          <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
+          <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
+          <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
+          <li class="navOpacity navDisplay navListItemsSpacing mt-3">Collections</li>
+          <li class="navOpacity  navListItemsSpacing navDisplay mt-3">Events</li>
+        </div>
+        <div class="col-12 d-none d-xl-block text-center">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
@@ -142,7 +149,7 @@
         <div class="col-12 col-xl-8">
           <div class="row">
             <div class="col-2 col-md-1">
-              <div class="hashBox text-center pt-2">#</div>
+              <div class="hashBox text-center">#</div>
             </div>
             <div class="col-10 col-md-9">
               <h5>3D</h5>
@@ -156,7 +163,7 @@
           <hr>
           <div class="row">
             <div class="col-2 col-md-1">
-              <div class="hashBox text-center pt-2">#</div>
+              <div class="hashBox text-center">#</div>
             </div>
             <div class="col-10 col-md-9">
               <h5>Ajax</h5>
@@ -170,7 +177,7 @@
           <hr>
           <div class="row">
             <div class="col-2 col-md-1">
-              <div class="hashBox text-center pt-2">#</div>
+              <div class="hashBox text-center">#</div>
             </div>
             <div class="col-10 col-md-9">
               <h5>Algorithm</h5>
@@ -240,7 +247,7 @@
           <hr>
           <div class="row">
             <div class="col-2 col-md-1">
-              <div class="hashBox text-center pt-2">#</div>
+              <div class="hashBox text-center">#</div>
             </div>
             <div class="col-10 col-md-9">
               <h5>Api</h5>
@@ -338,7 +345,7 @@
           <hr>
           <div class="row">
             <div class="col-2 col-md-1">
-              <div class="hashBox text-center pt-2">#</div>
+              <div class="hashBox text-center">#</div>
             </div>
             <div class="col-10 col-md-9">
               <h5>Mobile</h5>
