--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -87,7 +87,11 @@
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay mt-3">Events</li>
         </div>
-        <div class="col-12 d-none d-xl-block text-center">
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-none d-xl-block">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
