--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-12 d-none d-xl-block">
+        <div class="col-12 d-none d-xl-block ml-2">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
