--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid signUpSec d-none d-xl-block text-center">
+    <div class="container-fluid signUpSec d-none d-xl-block">
       <div class="row">
         <div class="col-12">
           <li class="navDisplay mr-2"><img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></li>
@@ -80,7 +80,7 @@
           <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
         </div>
-        <div class="col-12 d-none d-md-flex d-xl-none">
+        <div class="col-12 d-none d-md-flex">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
@@ -89,17 +89,17 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <!--<div class="container">
       <div class="row">
         <div class="col-12 d-none d-xl-block">
-          <li class="navDisplay navListItemsSpacing navOpacity mt-3 ml-4">Explore</li>
+          <li class="navDisplay navListItemsSpacing navOpacity mt-3 ">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay mt-3">Events</li>
         </div>
       </div>
-    </div>
+    </div>-->
   </nav>
   <section>
     <div class="container-fluid mb-4">
