--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid signUpSec d-none d-xl-block">
+    <div class="container-fluid signUpSec d-none d-xl-block text-center">
       <div class="row">
         <div class="col-12">
           <li class="navDisplay mr-2"><img src="assets/github-logo.svg" alt="github" class="githubLogo mt-3 mb-3"></li>
@@ -89,9 +89,9 @@
         </div>
       </div>
     </div>
-    <!--<div class="container">
+    <div class="container">
       <div class="row">
-        <div class="col-12 d-none d-xl-block">
+        <div class="col-12 d-none d-xl-block text-center">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3 ">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
@@ -99,7 +99,7 @@
           <li class="navOpacity  navListItemsSpacing navDisplay mt-3">Events</li>
         </div>
       </div>
-    </div>-->
+    </div>
   </nav>
   <section>
     <div class="container-fluid mb-4">
