--- a/assignments/assignment-24/index.html
+++ b/assignments/assignment-24/index.html
@@ -80,7 +80,7 @@
           <li class="navOpacity navDisplay navListItemsSpacing">Collections</li>
           <li class="navOpacity  navListItemsSpacing navDisplay">Events</li>
         </div>
-        <div class="col-12 d-none d-md-flex">
+        <div class="col-12 d-none d-md-flex d-xl-none">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3">Explore</li>
           <li class="navDisplay navTopicsSection navListItemsSpacing pb-2 mt-3">Topics</li>
           <li class="navOpacity navDisplay navListItemsSpacing mt-3">Trending </li>
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 d-none d-xl-block text-center">
           <li class="navDisplay navListItemsSpacing navOpacity mt-3 ">Explore</li>
